_archive/content-services/5.1/concepts/dev-reference-guide.md
---
author: Alfresco Documentation
---

# Reference

This information provides reference materials for the various APIs that are available.

This information includes various API reference guides. For more descriptive material, including tutorials, see the Developer Guide.

-   **[REST API](../pra/1/topics/pra-welcome.md)**  
 The REST API lets you access content in an on-premise Alfresco repository, and in Alfresco cloud, from your own applications. The API is RESTful, which means each call is an HTTP request, so you don't even need a programming language to try it out. You can just type a URL address in a web browser.
-   **[Java API](../concepts/java-public-api-list.md)**  
When you need to create new services in Alfresco, or develop applications or customizations that cannot be implemented at the web script level, it is necessary to write those extensions in Java. Alfresco provides numerous Java-level APIs, which are documented through the JavaDoc system.
-   **[JavaScript API](../concepts/API-JS-intro.md)**  
The Repository JavaScript API lets you develop JavaScript \(ECMAScript\) 1.6 compatible files to access, modify, and create Alfresco repository objects such as nodes, aspects, and properties.
-   **[FreeMarker API](../references/API-FreeMarker-intro.md)**  
FreeMarker templates can be used to generate the view component of the Model-View-Controller \(MVC\) pattern.
-   **[Web Scripts](../concepts/ws-reference.md)**  
This information provides reference material for web script options, objects, and methods.
-   **[Spring Surf API](../references/APISurfPlatform-intro.md)**  
The Surf API lets you build user interfaces for your web applications using server-side scripts and templates. This is the full list of the objects and methods that compose the Surf API that can be access from web script JavaScript controllers and FreeMarker templates.

**Parent topic:**[API guide](../concepts/dev-api-intro.md)

